--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,3 +18,11 @@ $font-family: 'Montserrat';
   }
   font-family: $font-family, sans-serif !important;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.font-weight-semibold {
+  font-weight: 600;
+}
