--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,3 +26,8 @@ $font-family: 'Montserrat';
 .font-weight-semibold {
   font-weight: 600;
 }
+
+.font-author {
+  font-weight: 500;
+  font-size: 18px;
+}
