added margin on scroll uprise

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,9 +5,9 @@ body, html {
   overflow-y: auto !important;
 }
 
-// html {
-//   margin-left: calc(100vw - 100%);
-// }
+html {
+  margin-left: calc(100vw - 100%);
+}
 
 $font-family: 'Montserrat';
 
