--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,3 +31,9 @@ $font-family: 'Montserrat';
   font-weight: 500;
   font-size: 18px;
 }
+
+.error-message {
+  color: red;
+  font-weight: 8px;
+  text-align: start;
+}
