--- a/src/assets/styles/animations.scss
+++ b/src/assets/styles/animations.scss
@@ -29,3 +29,13 @@
   transform: translateY(20px);
   opacity: 0;
 }
+
+.list-enter-active,
+.list-leave-active {
+  transition: all 0.5s ease;
+}
+.list-enter-from,
+.list-leave-to {
+  opacity: 0;
+  transform: translateX(30px);
+}
