--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -77,6 +77,10 @@ $body-font-family: 'Montserrat';
   line-height: 1;
 }
 
+.user-select-none {
+  user-select: none;
+}
+
 .entries-container {
   width: 100%;
   display: grid;
